--- a/src/scss/variables/_index.scss
+++ b/src/scss/variables/_index.scss
@@ -2,4 +2,5 @@ $font: 'Epilogue';
 
 $offwhite: hsl(0, 0%, 98%);
 $gray: hsl(0, 0%, 41%);
+$ltgray: hsl(0, 0%, 61%);
 $offblack: hsl(0, 0%, 8%);
